#738 explicitly made the header line mandatory

--- a/VCFv4.5.draft.tex
+++ b/VCFv4.5.draft.tex
@@ -311,7 +311,7 @@ It is possible to record relationships between genomes using the following synta
 
 \subsection{Header line syntax}
 \label{header-line}
-The header line names the 8 fixed, mandatory columns. These columns are as follows:
+The mandatory header line names the 8 fixed, mandatory columns. These columns are as follows:
 \begin{center}
        \#CHROM
 \qquad POS
